--- a/index.html
+++ b/index.html
@@ -1,75 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OuassVTC - Chauffeur Privé</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background-color: #000;
-            color: white;
-            padding: 20px 40px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-        header img {
-            height: 60px;
-        }
-        .hero {
-            text-align: center;
-            padding: 50px 20px;
-            background-color: #fff;
-        }
-        .hero img {
-            max-width: 90%;
-            height: auto;
-            margin-top: 20px;
-        }
-        .hero h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-        }
-        .cta-button {
-            display: inline-block;
-            margin-top: 30px;
-            padding: 15px 30px;
-            background-color: #000;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 8px;
-            font-size: 1.2em;
-        }
-        footer {
-            background-color: #000;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            margin-top: 40px;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <img src="logo.png" alt="Logo OuassVTC">
-        <div>Chauffeur privé VTC</div>
-    </header>
-    <div class="hero">
-        <h1>Bienvenue chez OuassVTC</h1>
-        <p>Votre chauffeur privé fiable, professionnel et disponible 24h/24 à prix abordable.</p>
-        <img src="voiture.png" alt="Voiture OuassVTC">
-        <br>
-        <a class="cta-button" href="https://wa.me/33600000000" target="_blank">Réserver via WhatsApp</a>
-    </div>
-    <footer>
-        © 2025 OuassVTC. Tous droits réservés.
-    </footer>
-</body>
-</html>
+Suppression du fichier logo
