--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <body>
 
   <header>
-    <img src="logo.png" alt="Logo OuassVTC" />
+    <img src="logo.png1" alt="Logo OuassVTC" />
     <h1>OuassVTC - VTC à Perpignan</h1>
   </header>
 
