--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
   </div>
 
   <div class="about">
-    Chez <strong>OuassVTC</strong>, notre mission est de vous offrir un service de transport VTC rapide, fiable et accessible à tout moment. Basés à Perpignan, nous mettons à votre disposition des chauffeurs professionnels et ponctuels pour répondre à tous vos besoins de déplacement. Que ce soit pour un trajet local, un transfert vers une gare, un aéroport ou un rendez-vous professionnel, nous assurons un accompagnement sérieux et adapté à vos attentes.
-
+    Chez <strong>OuassVTC</strong>, notre mission est de vous offrir un service de transport VTC rapide, fiable et accessible à tout moment. Basés à Perpignan, nous mettons à votre disposition des chauffeurs professionnels et ponctuels pour répondre à tous vos besoins de déplacement. Que ce soit pour un trajet local, un transfert vers une gare, un aéroport ou un rendez-vous professionnel, nous assurons un accompagnement sérieux et adapté à vos attentes.<br><br>
     Nous intervenons sur Perpignan et dans toute sa région, avec une disponibilité 7j/7. Notre priorité est votre satisfaction : un service courtois, un véhicule propre et confortable, un trajet fluide et une prise en charge sans attente. Grâce à notre réactivité, nous garantissons des réservations simples et rapides, par téléphone, SMS, WhatsApp ou en ligne. Faites confiance à OuassVTC pour un transport en toute sérénité.
   </div>
 
@@ -145,6 +144,8 @@
         });
     });
   </script>
+</body>
+</html>
 </body>
 </html>
 
