--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
       margin-left: auto;
       margin-right: auto;
     }
+    footer {
+      margin-top: 40px;
+      background-color: #000;
+      color: white;
+      padding: 30px 10px;
+    }
   </style>
 </head>
 <body>
@@ -100,7 +106,7 @@
     <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp.png" alt="WhatsApp" />WhatsApp</a>
     <a href="sms:0644120784?body=Bonjour, je souhaite réserver un VTC."><img src="https://img.icons8.com/ios-filled/50/ffffff/sms.png" alt="SMS" />SMS</a>
     <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/ffffff/facebook--v1.png" alt="Facebook" />Facebook</a>
-    <a href="#" onclick="alert('Ajoute-nous sur Snapchat : ouassvtc'); return false;"><img src="https://img.icons8.com/ios-filled/50/000000/snapchat.png" alt="Snapchat" />Snapchat</a>
+    <a href="https://www.snapchat.com/add/ouassvtc" target="_blank"><img src="https://img.icons8.com/ios-filled/50/000000/snapchat.png" alt="Snapchat" />Snapchat</a>
   </div>
 
   <div class="about">
@@ -128,6 +134,11 @@
     transport de qualité, trajet ponctuel, service client chauffeur.
   </div>
 
+  <footer>
+    <p>&copy; 2025 OuassVTC - Tous droits réservés.</p>
+    <p>Transport privé disponible 7j/7 — Réservation simple, rapide et sécurisée.</p>
+  </footer>
+
   <script type="module">
     import emailjs from 'https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js';
     emailjs.init('U08QGWWRUenJDOllc');
@@ -144,8 +155,6 @@
         });
     });
   </script>
-</body>
-</html>
 </body>
 </html>
 
