--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="OuassVTC Logo" />
+    <img src="ouassvtc.png" alt="OuassVTC Logo" />
   </header>
 
   <h1>Réservez votre chauffeur privé à Perpignan</h1>
