--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>OuassVTC - Réservation</title>
+  <title>OuassVTC - Réservation VTC à Perpignan</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
       background-color: #f5f5f5;
       color: #333;
+      margin: 0;
+      padding: 0;
     }
     header {
       background-color: #000;
@@ -19,16 +19,18 @@
       text-align: center;
     }
     header img {
-      max-height: 120px;
+      height: 120px;
     }
     .container {
       padding: 20px;
+      max-width: 900px;
+      margin: auto;
     }
-    img.car {
+    .car-image {
       width: 100%;
-      max-width: 500px;
+      max-width: 600px;
       display: block;
-      margin: 0 auto 20px;
+      margin: 0 auto 20px auto;
     }
     .buttons {
       display: flex;
@@ -38,18 +40,21 @@
       margin-bottom: 20px;
     }
     .buttons a {
-      text-decoration: none;
-      padding: 10px 15px;
+      display: flex;
+      align-items: center;
+      gap: 5px;
       background-color: #333;
-      color: #fff;
+      color: white;
+      padding: 10px 15px;
       border-radius: 5px;
+      text-decoration: none;
     }
     form {
-      max-width: 500px;
-      margin: 0 auto;
       display: flex;
       flex-direction: column;
       gap: 10px;
+      max-width: 500px;
+      margin: 20px auto;
     }
     input, textarea {
       padding: 10px;
@@ -58,21 +63,23 @@
       border: 1px solid #ccc;
     }
     button {
-      background-color: #007bff;
-      color: #fff;
       padding: 10px;
+      background-color: #007bff;
+      color: white;
+      font-size: 16px;
       border: none;
       border-radius: 5px;
-      font-size: 16px;
       cursor: pointer;
     }
-    .footer {
-      margin-top: 30px;
-      padding: 20px;
+    footer {
       background-color: #000;
-      color: #fff;
+      color: white;
       text-align: center;
-      font-size: 14px;
+      padding: 30px 10px;
+      margin-top: 40px;
+    }
+    .hidden-keywords {
+      display: none;
     }
   </style>
 </head>
@@ -82,20 +89,18 @@
   </header>
 
   <div class="container">
-    <img class="car" src="voiture.png" alt="Voiture VTC" />
+    <img src="voiture.png" alt="Voiture VTC" class="car-image" />
 
     <div class="buttons">
-      <a href="tel:0644120784">📞 Appeler</a>
-      <a href="https://wa.me/33644120784" target="_blank">💬 WhatsApp</a>
-      <a href="sms:+33644120784">📩 SMS</a>
-      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank">📘 Facebook</a>
-      <a href="snapchat://add/ouassvtc">👻 Snapchat</a>
+      <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/24/phone.png"/> Appeler</a>
+      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/24/whatsapp.png"/> WhatsApp</a>
+      <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/24/sms.png"/> SMS</a>
+      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/24/facebook-new.png"/> Facebook</a>
+      <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/24/snapchat.png"/> Snapchat</a>
     </div>
 
     <p style="text-align:center;font-weight:bold;">
-      OuassVTC vous propose un service de transport privé à Perpignan et ses alentours.
-      Ponctualité, professionnalisme et confort sont au cœur de notre engagement.
-      Réservez en quelques secondes et laissez-nous vous conduire où vous voulez, quand vous voulez.
+      OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez. Faites confiance à OuassVTC pour vos trajets personnels, professionnels ou touristiques.
     </p>
 
     <form onsubmit="sendEmail(event)">
@@ -109,13 +114,17 @@
     </form>
   </div>
 
-  <div class="footer">
-    © 2025 OuassVTC. Tous droits réservés.
+  <footer>
+    © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.
+  </footer>
+
+  <div class="hidden-keywords">
+    Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transfert gare Perpignan, aéroport VTC, transport sécurisé, transport Perpignan, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
   </div>
 
   <script type="text/javascript">
     (function() {
-      emailjs.init("U08QGWWRUenJDOllc"); // Ta clé publique
+      emailjs.init("U08QGWWRUenJDOllc");
     })();
 
     function sendEmail(event) {
