--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Logo OuassVTC" />
+    <img src="ouassvtc.png" alt="Logo OuassVTC" />
   </header>
 
   <div class="container">
