--- a/index.html
+++ b/index.html
@@ -124,11 +124,12 @@
 
   <script type="text/javascript">
     (function() {
-      emailjs.init("U08QGWWRUenJDOllc");
+      emailjs.init("U08QGWWRUenJDOllc"); // Remplace avec ton User ID EmailJS
     })();
 
     function sendEmail(event) {
       event.preventDefault();
+
       emailjs.send("service_kdvgh9f", "template_93fatdg", {
         nom: document.getElementById("nom").value,
         telephone: document.getElementById("telephone").value,
@@ -141,35 +142,9 @@
         alert("Votre demande a bien été envoyée !");
       }, function(error) {
         alert("Erreur lors de l'envoi. Veuillez réessayer.");
+        console.error("EmailJS error:", error);
       });
     }
   </script>
 </body>
 </html>
-<script type="text/javascript">
-  (function() {
-    emailjs.init("U08QGWWRUenJDOllc");
-  })();
-
-  function sendEmail(event) {
-    event.preventDefault();
-
-    console.log("Tentative d'envoi...");
-    
-    emailjs.send("service_kdvgh9f", "template_93fatdg", {
-      nom: document.getElementById("nom").value,
-      telephone: document.getElementById("telephone").value,
-      dateheure: document.getElementById("dateheure").value,
-      depart: document.getElementById("depart").value,
-      arrivee: document.getElementById("arrivee").value,
-      message: document.getElementById("message").value
-    })
-    .then(function(response) {
-      console.log("Envoi réussi ✅", response);
-      alert("Votre demande a bien été envoyée !");
-    }, function(error) {
-      console.error("Erreur ❌", error);
-      alert("Erreur lors de l'envoi. Veuillez réessayer.");
-    });
-  }
-</script>
